fix(invoices): wrong data formating in invoice add
