# bootstrap/api-docs/api-docs.json
@@ -2,8 +2,10 @@
     "openapi": "3.0.0",
     "info": {
         "title": "CLIENTXCMS New Gen API",
-        "description": "This is the API documentation for the CLIENTXCMS New Gen API",
+        "description": "This is the API documentation for the CLIENTXCMS New Gen API. ",
         "contact": {
+            "name": "CLIENTXCMS Support",
+            "url": "https://clientxcms.com/client/support",
             "email": "contact@clientxcms.com"
         },
         "version": "1.0.2"
